# Ancalagon

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md
headers/: adapterGPU.h  chinese_remainder_theorem.h  cpu.h  gpu.h  lattice.h  latticeFactory.h  latticeSquare.h  redAndBlackTree.h  redAndBlackTreeSE.h  run.h
sources/: adapterGPU.cu  chinese_remainder_theorem.cpp  cpu.cpp  gpu.cu  lattice.cpp  latticeCPU.cpp  latticeFactory.cpp  latticeGPU.cpp  latticeSquare.cpp  main.cpp  main.cu  redAndBlackTree.cpp  redAndBlackTreeSE.cpp  run.cpp
